# xmltv-schedule-sync

./: .gitignore  LICENSE.md  README.md  pyproject.toml  run.py
samples/: sample_sources.csv  sample_x.xml
