[project]
name = "gonna-mobi-schedule-fetch"
version = "1.0.0"
description = ""
authors = [{ name = "gregory@makesometh.ing" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
